--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url('images/sunny.jpg');
+    background-image: url('sunny.jpg');
     height: 100vh;
     overflow: hidden;
     background-repeat: no-repeat;
