--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body{
-    background-image: url('sunny.jpg');
+    background-image: url('images/sunny.jpg');
     height: 100vh;
     overflow: hidden;
     background-repeat: no-repeat;
@@ -63,7 +63,6 @@ body{
     font-size: 50pt;
     font-weight: 700;
     margin: 20px 0;
-    /* text-shadow: 2px 2px rgba(0,0,0,03); */
 }
 .min-max,.comment
 {
